[project]
name = "lie_ai"
version = "0.1.2"
description = "A CLI tool for asking LLM questions like 'which is bigger, 9.11 or 9.4?'"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = ['openai']

[project.scripts]
lie = "lie_ai.__init__:main"

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"